bk_ida/gccida/g1/gen_add_mult
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_add_mult/src/loop.c:8096:39: error: use of undeclared identifier 'machine_mode'
v6 = expand_mult_add( b, reg, m, a, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_add_mult/src/obj/loop.o] Error 1
